changing all teh calls using *consul.Consulet to call the interface consul.Consuletty
