# router/admin/status.go
@@ -19,6 +19,12 @@ import (
 func (g *guideOcelotServer) GetStatus(ctx context.Context, query *pb.StatusQuery) (result *pb.Status, err error) {
 	var buildSum models.BuildSummary
 	switch {
+	case query.BuildId != 0:
+		buildSum, err = g.Storage.RetrieveSumByBuildId(query.BuildId)
+		if err != nil {
+			return nil, handleStorageError(err)
+		}
+		goto BUILD_FOUND
 	case len(query.Hash) > 0:
 		partialHash := query.Hash
 		buildSum, err = g.Storage.RetrieveLatestSum(partialHash)
@@ -74,6 +80,7 @@ func (g *guideOcelotServer) GetStatus(ctx context.Context, query *pb.StatusQuery
 	default:
 		return nil, status.Error(codes.InvalidArgument, "either hash is required, acctName and repoName is required, or partialRepo is required")
 	}
+	// todo: evaluate if this goto is necessary ... i think since we moved from if chain to switch this is no longer helpful
 BUILD_FOUND:
 	stageResults, err := g.Storage.RetrieveStageDetail(buildSum.BuildId)
 	if err != nil {
